<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">mWeatherWidget</string>
    <string name="appwidget_text">-- \u00B0C</string>
    <string name="show_hint">Tapping hint?</string>
    <string name="location">Oulu, Linnanmaa</string>
    <string name="toast_text_1"> 1 * tap \u2015> Refresh data</string>
    <string name="toast_text_2"> 2 * tap \u2015> Open URL</string>
    <string name="toast_text_3"> 3 * tap \u2015> Show hint?</string>
    <string name="toast_updated">Refreshed!</string>
    <string name="default_min">MIN</string>
    <string name="default_max">MAX</string>
    <string name="default_timestamp">00:00</string>
    <string name="button_dismiss">Dismiss</string>
</resources>
