<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/layoutWidget"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0ffffff">

    <TextView
        android:id="@+id/tvTempNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="0dp"
        android:text="@string/appwidget_text"
        android:textColor="@android:color/black"
        android:textSize="17dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/location"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:gravity="center"
        android:layout_marginRight="2dp"/>

    <TextView
        android:id="@+id/tv_MinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="3dp"
        android:text="@string/default_min"
        android:textColor="#ff4e2cff"
        android:textSize="12dp"/>

    <TextView
        android:id="@+id/tv_MaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="3dp"
        android:text="@string/default_max"
        android:textColor="#ffd00202"
        android:textSize="12dp"/>

    <TextView
        android:id="@+id/textTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTempNow"
        android:layout_centerHorizontal="true"
        android:text="@string/default_timestamp"
        android:textColor="@android:color/darker_gray"
        android:textSize="8dp"/>

</RelativeLayout>
